<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">
    <!-- 课程概况 -->
<RelativeLayout
    android:id="@+id/zero"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/biankuang"
    android:layout_marginTop="35dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">
    <!-- 课程名 -->
    <TextView
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coursename"
        android:textSize="25sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/course_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/one"
        android:textSize="@dimen/common"
        android:layout_alignBaseline="@id/one"/>
    <!-- 优选学期 -->
    <TextView
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prefersemester"
        android:layout_below="@id/one"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/course_prefersemester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/four"
        android:layout_alignTop="@id/four"
        android:textSize="@dimen/common"
        android:layout_alignBaseline="@id/four"/>
    <!-- 任课老师 -->
    <TextView
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teaching"
        android:layout_below="@id/four"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:layout_marginStart="15dp"/>
     <Button
         android:id="@+id/teacher_one"
         android:layout_width="100dp"
         android:layout_height="26dp"
         android:background="@drawable/biankuang_bt"
         android:textSize="@dimen/common"
         android:textColor="@color/white"
         android:text="@string/teacher_one"
         android:layout_toEndOf="@id/six"
         android:layout_alignTop="@id/six"
         android:layout_marginStart="5dp"
         />
     <Button
         android:id="@+id/teacher_two"
         android:layout_width="100dp"
         android:layout_height="26dp"
         android:background="@drawable/biankuang_bt"
         android:textSize="@dimen/common"
         android:textColor="@color/white"
         android:text="@string/teacher_two"
         android:layout_toEndOf="@id/teacher_one"
         android:layout_alignTop="@id/six"
         android:layout_marginStart="10dp"/>

    <!-- 考核方式
    <TextView
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examiningmode"
        android:layout_below="@id/six"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/course_examiningmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/seven"
        android:layout_alignTop="@id/seven" />-->
    <!-- 评分 -->
    <TextView
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setscore"
        android:layout_below="@id/six"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:layout_marginStart="15dp"/>
    <TextView
        android:id="@+id/setscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/eight"
        android:layout_alignTop="@id/eight"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/givescore"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:background="@drawable/biankuang_pf"
        android:textSize="@dimen/common"
        android:text="@string/setSC"
        android:textColor="@color/white"
        android:layout_below="@id/eight"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp" />
</RelativeLayout>
    <!--书籍封面-->
    <ImageView
        android:id="@+id/bookimage"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:contentDescription="@string/bookcover"
        android:layout_below="@id/zero"
        android:layout_marginTop="20dp"/>
    <!--书籍介绍-->
    <RelativeLayout
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/biankuang"
        android:layout_alignTop="@id/bookimage"
        android:layout_toEndOf="@id/bookimage"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" >
        <TextView
            android:id="@+id/ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textbook"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/textbbook"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:background="@drawable/biankuang_bt"
            android:layout_toEndOf="@id/ten"
            android:layout_marginStart="0dp"
            android:layout_alignTop="@id/ten"
            android:textSize="@dimen/common"/>
        <TextView
            android:id="@+id/introducebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ten"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp" />
    </RelativeLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#000000"
        android:layout_below="@id/bookimage"
        android:layout_marginTop="10dp"
        />
    <!--给评论预留的-->
    <RelativeLayout
        android:id="@+id/eleven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookimage"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/twolve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writecomment"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/threeteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commentnum"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"/>
    </RelativeLayout>
</RelativeLayout>

