<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="16dp"
    android:background="@drawable/bg_re_course">
        <!--定义一个list的排列模板-->
        <ImageView
            android:id="@+id/coursecover"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/course"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
          >
            <TextView
                android:id="@+id/cname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/teacherwho" />

        </LinearLayout>
</LinearLayout>