<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">
    <!--教师照片-->
    <ImageView
        android:id="@+id/teacherimage"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:contentDescription="@string/teacherimg"
        android:layout_marginTop="20dp"/>
    <!--教师所教授课程-->
    <RelativeLayout
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/biankuang"
        android:layout_toEndOf="@id/teacherimage"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp">
        <TextView
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/mainteach"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/student1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/studentone"
            android:layout_marginStart="20dp"
            android:layout_below="@id/one" />

        <Button
            android:id="@+id/courseone"
            android:layout_width="75dp"
            android:layout_height="20dp"
            android:layout_alignTop="@id/student1"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/student1"
            android:background="@drawable/biankuang_bt"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:id="@+id/student2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/studenttwo"
            android:layout_marginStart="20dp"
            android:layout_below="@id/student1"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/coursetwo"
            android:layout_width="75dp"
            android:layout_height="20dp"
            android:background="@drawable/biankuang_bt"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/student2"
            android:layout_alignTop="@id/student2"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:id="@+id/student3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/studentthree"
            android:layout_marginStart="20dp"
            android:layout_below="@id/student2"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/coursethree"
            android:layout_width="75dp"
            android:layout_height="20dp"
            android:background="@drawable/biankuang_bt"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/student3"
            android:layout_alignTop="@id/student3"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:id="@+id/student4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/studentfour"
            android:layout_marginStart="20dp"
            android:layout_below="@id/student3"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/coursefour"
            android:layout_width="75dp"
            android:layout_height="20dp"
            android:background="@drawable/biankuang_bt"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/student4"
            android:layout_alignTop="@id/student4"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>
    <!--教师简介-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/biankuang"
        android:layout_marginTop="20dp"
        android:layout_below="@id/teacherimage">
     <TextView
         android:id="@+id/three"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="10dp"
         android:textSize="20sp"
         android:layout_marginTop="10dp"
         android:text="@string/intrpeople">
         </TextView>
        <TextView
            android:id="@+id/peopleintro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/three">
        </TextView>
        <TextView
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:layout_below="@id/peopleintro"
            android:text="@string/research"
            android:layout_marginTop="10dp">
        </TextView>
        <TextView
            android:id="@+id/researchin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_below="@id/four"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
        </TextView>
    </RelativeLayout>
    <!--给评论预留的-->
    <RelativeLayout
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/biankuang">
    </RelativeLayout>
</RelativeLayout>
