<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--搜索框-->
    <android.support.v7.widget.SearchView
        android:id="@+id/searchEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_search_selector"
        android:queryHint="@string/entercourse"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp">
    </android.support.v7.widget.SearchView>
    <!--第一个列表，展示搜索项-->
    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/searchEdit">
    </ListView>

    <!--hot小图标-->
    <ImageView
        android:id="@+id/HotImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/hot"
        android:src="@drawable/hot"
        android:layout_marginTop="20dp"
        android:layout_below="@id/searchEdit"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/HotImage"
        android:layout_toEndOf="@id/HotImage"
        android:layout_marginStart="20dp"
        android:text="@string/hotbook"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <!--热一课程-->
    <TextView
        android:id="@+id/T_C_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/one"
        android:layout_marginTop="10dp"/>
    <!--热一课程-->
    <TextView
        android:id="@+id/T_C_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/T_C_one"
        android:layout_marginTop="10dp"/>
    <!--热一课程-->
    <TextView
        android:id="@+id/T_C_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/T_C_two"
        android:layout_marginTop="10dp"/>

    <!--设置可点击的textView-->
    <TextView
        android:id="@+id/morebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formorebook"
        android:layout_below="@id/T_C_three"
        android:layout_alignParentEnd="true"
        android:textColor="@color/red"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
       />
   <RelativeLayout
       android:id="@+id/six"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/morebook"
       android:gravity="center"
       android:layout_centerInParent="true"
       android:layout_marginTop="10dp"
       >
       <Button
           android:id="@+id/latest"
           android:layout_width="100dp"
           android:layout_height="30dp"
           android:background="@drawable/bg_button_list"
           android:drawableStart="@drawable/thelatest"
           android:paddingStart="5dp"
           android:paddingEnd="5dp"
           android:text="@string/thelatest"/>
       <Button
           android:id="@+id/likebook"
           android:layout_width="100dp"
           android:layout_height="30dp"
           android:layout_alignTop="@id/latest"
           android:background="@drawable/bg_button_list"
           android:drawableStart="@drawable/likebook"
           android:paddingStart="5dp"
           android:paddingEnd="5dp"
           android:layout_marginStart="160dp"
           android:text="@string/youmaylikebook"/>
   </RelativeLayout>
    <!--书籍展示-->
    <RelativeLayout
        android:id="@+id/seven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/six"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <ListView
            android:id="@+id/ListView_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        </ListView>
    </RelativeLayout>
</RelativeLayout>