<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">
    <!--搜索框-->
        <android.support.v7.widget.SearchView
            android:id="@+id/searchEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_search_selector"
            android:queryHint="@string/entercourse"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">
        </android.support.v7.widget.SearchView>
      <!--第一个列表，展示热度top20的书籍-->
        <ListView
            android:id="@+id/list_Top20"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        </ListView>
    <!--hot小图标-->
    <ImageView
        android:id="@+id/HotImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/hot"
        android:src="@drawable/hot"
        android:layout_marginTop="20dp"
        android:layout_below="@id/searchEdit"
        android:layout_marginStart="10dp"
       />
    <TextView
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/HotImage"
        android:layout_toEndOf="@id/HotImage"
        android:layout_marginStart="20dp"
        android:text="@string/hotcourse"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <ListView
        android:id="@+id/courselist"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/HotImage"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <!--设置可点击的textView-->
    <TextView
        android:id="@+id/morecourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/morecourse"
        android:layout_below="@id/courselist"
        android:layout_alignParentEnd="true"
        android:textColor="@color/red"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"/>
    <!--like小图标-->
    <ImageView
        android:id="@+id/LikeImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/maylike"
        android:src="@drawable/like"
        android:layout_marginTop="15dp"
        android:layout_below="@id/morecourse"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/LikeImage"
        android:layout_toEndOf="@id/LikeImage"
        android:layout_marginStart="20dp"
        android:text="@string/maylike"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <!--书籍展示-->
    <RelativeLayout
        android:id="@+id/three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LikeImage"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <ListView
            android:id="@+id/ListView_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </RelativeLayout>
</RelativeLayout>